Networking/networkpolicypod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: network-policy
  labels:
    app: frontend
spec:
  containers:
    - name: nginxcontainer
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod
  namespace: network-policy
  labels:
    app: client
spec:
  containers:
    - name: ubuntucontainer
      image: ubuntu
      command:
        - /bin/sh
      args:
        - '-c'
        - sleep 3600
