Networking/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-nodename
spec:
  containers:
    - name: nginxcontainer
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-app
spec:
  containers:
    - name: alpinecontainer
      image: alpine
      command:
        - sleep
        - '3600'
